--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@
             border-radius: 8px;
             transition: transform 0.3s ease;
         }
+        .contact-section-boxtext{
+            background: var(--primary-color);
+            color: rgb(44,62,80);
+            padding: 80px 0;
+        }            
 
         .contact-item:hover {
             transform: translateY(-2px);
