--- a/style.css
+++ b/style.css
@@ -94,7 +94,12 @@
             background: var(--primary-color);
             color: rgb(44,62,80);
             padding: 80px 0;
-        }            
+        }  
+        .justify-content-center1{
+            background: var(--primary-color);
+            color: white;
+            padding: 80px 0;
+        }  
 
         .contact-item:hover {
             transform: translateY(-2px);
